src/theme/_cms-ui.scss
/* ... */
/*Has toolbar*/
body.has-toolbar {
  #toolbar {
    .toolbar-content.show {
      z-index: 9;
    }
    .personal-tools {
      .avatar {
        width: 220px;
        margin: 1rem auto;
      }
    }
  }
  &.public-ui #toolbar {
    .toolbar {
      &:before {
        content: none;
      }
    }

    .toolbar-content.show {
      max-height: 100vh;
      overflow-y: scroll !important;
    }
  }
}

/*Multilingual*/
#page-add-translation {
  .block {
    .ui.container {
      width: 100% !important;
    }

    .row.row-full-width {
      max-width: 100%;
      margin: 0;
    }
  }
}

